# ansible-test-deps-ga-uv

./: .gitignore  README.md  ansible.cfg  pb_test.yml  pyproject.toml  renovate.json  vault-pass.sh
.github/workflows/: test.yml
inventory/host_vars/localhost/: main.yml
